# faraway-final

./: .gitignore  AUDIT.md  FEATURES.md  README.md  SETUP_AND_RUN.md  pyproject.toml  rail_defect_detection_research.txt  requirements.txt  run_api.py  run_experiments.py  train.py
backend/: cli.py
backend/api/: server.py
backend/datasets/: augmentation.py  dataset_loader.py  synthetic_augment.py
backend/evaluation/: benchmark.py  cross_domain.py  metrics.py
backend/models/: __init__.py  dinov2_encoder.py  open_set_recognizer.py  patchcore_anomaly.py  prototypical_network.py  severity_estimator.py
backend/pipeline/: __init__.py  orchestrator.py  phase1_input_validation.py  phase2_rail_extraction.py  phase3_patch_pipeline.py
backend/twins/: digital_twin.py
backend/utils/: conformal.py  device.py  embeddings_db.py  explainability.py  hard_negatives.py
frontend/: next.config.mjs  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json
frontend/public/demo/: manifest.json
frontend/src/app/: client-layout.tsx  error.tsx  globals.css  layout.tsx  loading.tsx  not-found.tsx  page.tsx
frontend/src/app/discovery/: page.tsx
frontend/src/app/explain/: page.tsx
frontend/src/app/few-shot/: page.tsx
frontend/src/app/live/: page.tsx
frontend/src/app/maintenance/: page.tsx
frontend/src/lib/: api.ts  types.ts
models/: few_shot_eval.json
results/: experiment_results.json
scripts/: make_synthetic_data.py  seed_demo_embeddings.py
tests/: test_conformal.py  test_patchcore.py  test_prototypical.py  test_safety.py  test_severity_twin.py
(+10 files in other folders)
