[tool.poetry]
name = "railguard-fslpp"
version = "1.0.0"
description = "Few-Shot Defect Detection in Rail Infrastructure — Research Platform"
authors = ["RailGuard-FSL++ Team"]
readme = "README.md"
packages = [{ include = "backend" }]

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.0.0"
torchvision = "^0.15.0"
numpy = "^1.24.0"
opencv-python = "^4.8.0"
Pillow = "^10.0.0"
scikit-learn = "^1.3.0"
scipy = "^1.11.0"
tqdm = "^4.65.0"
matplotlib = "^3.7.0"
seaborn = "^0.12.0"
albumentations = "^1.3.0"
einops = "^0.6.0"
faiss-cpu = "^1.7.4"
transformers = "^4.30.0"
accelerate = "^0.20.0"
fastapi = "^0.104.0"
uvicorn = "^0.24.0"
pydantic = "^2.5.0"
python-multipart = "^0.0.6"
anomalib = "^0.4.0"
wandb = "^0.15.0"
imagehash = "^4.3.0"
gdown = "^4.7.0"
pandas = "^2.0.0"
plotly = "^5.17.0"
httpx = "^0.25.0"
python-dotenv = "^1.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.0.0"
ruff = "^0.1.0"
mypy = "^1.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
